k8s/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: nginx-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: nathstore.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server-service
            port: 
              number: 80
